# GenAi_DSS

./: README.md  prompts_log.json  pyproject.toml  story_output.json
backend/: .gitignore  prompts_log.json  server.py  story_output.json
backend/examples/rickshaw_accident/: character_configs.json  seed_story.json
backend/src/: config.py  schemas.py  story_state.py
backend/src/agents/: base_agent.py  director_agent.py
backend/src/graph/: narrative_graph.py
backend/src/prompts/: character_prompts.py
frontend/: package-lock.json  package.json
frontend/app/: page.jsx
frontend/components/: ControlPanel.jsx  EventFeed.jsx  EventItem.jsx  WorldSidebar.jsx
src/: config.py  main.py  schemas.py  story_state.py
src/agents/: character_agent.py  director_agent.py
src/graph/: narrative_graph.py
src/prompts/: character_prompts.py  director_prompts.py
